PROJECTS/seateleven/crm/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-app
  namespace: crm
spec:
  selector:
    app: crm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
